veriler git ile eşleşecek şekilde düzenlendi