@@ -1,3 +1,4 @@
+
 package pages;
 
 import org.openqa.selenium.By;
@@ -11,25 +12,27 @@ public class RolesPage {
 
     private final By collapseMenuIcon = By.cssSelector("svg.icon.icon-xl.fw-bolder[alt='Collapse']");
     private final By rolesMenuLink = By.xpath("//a[contains(., 'Roles')]");
-    private final By rolesList = By.xpath("//button[contains(@class, 'btn') and contains(text(), '')]");
-    //button[contains(@class, 'btn') and contains(@class, 'text-start') and normalize-space(string()) != '']
-    //button[contains(@class, 'btn') and contains(text(), '')]
+    private final By rolesList = By.cssSelector("button.btn.btn-light.border.w-100.mw-100.text-start");
     private final By breadcrumbRoleDetail = By.xpath("//li[@class='breadcrumb-item active' and text()='Role Detail']");
     private final By permissionsLabels = By.xpath("//label[contains(@class, 'btn') and contains(@class, 'btn-outline-secondary')]");
 
-    public void collapseMenuIfExpanded() {
+    /*
+    public RolesPage collapseMenuIfExpanded() {
         List<WebElement> collapseIcons = ReusableMethods.visibilityOfElementsByWebDriverWait(collapseMenuIcon);
         if (!collapseIcons.isEmpty()) {
-            collapseIcons.getFirst().click();
+            collapseIcons.get(0).click();
         }
-    }
+        return this;
+    }*/
 
-    public void navigateToRolesPage() {
+    public RolesPage navigateToRolesPage() {
+        ReusableMethods.waitForSeconds(2);
         ReusableMethods.clickElementByWebDriverWait(rolesMenuLink).click();
-        ReusableMethods.waitForSeconds(1);
+        return this;
     }
 
     public List<String> getAllRoles() {
+        ReusableMethods.waitForSeconds(2);
         List<WebElement> roles = ReusableMethods.visibilityOfElementsByWebDriverWait(rolesList);
         return roles.stream()
                 .map(WebElement::getText)
@@ -52,14 +55,14 @@ public class RolesPage {
         return false;
     }
 
-    public void clickRoleByName(String roleName) {
+    public RolesPage clickRoleByName(String roleName) {
         ReusableMethods.waitForSeconds(2);
         List<WebElement> roles = ReusableMethods.visibilityOfElementsByWebDriverWait(rolesList);
         for (WebElement role : roles) {
             if (role.getText().trim().equalsIgnoreCase(roleName)) {
-                ReusableMethods.waitForSeconds(1); // stabilizasyon için
+                ReusableMethods.waitForSeconds(1);
                 role.click();
-                return;
+                return this;
             }
         }
         throw new RuntimeException("Role not found to click: " + roleName);
@@ -67,7 +70,7 @@ public class RolesPage {
 
     public boolean isRoleDetailPageVisible() {
         List<WebElement> breadcrumb = ReusableMethods.visibilityOfElementsByWebDriverWait(breadcrumbRoleDetail);
-        return !breadcrumb.isEmpty() && breadcrumb.getFirst().isDisplayed();
+        return !breadcrumb.isEmpty() && breadcrumb.get(0).isDisplayed();
     }
 
     public List<String> getAllPermissionsForSelectedRole() {
